# docs/swagger.yaml
@@ -2678,11 +2678,15 @@ definitions:
     properties:
       high:
         type: integer
+      high_sec_per_100m:
+        type: integer
       high_sec_per_km:
         type: integer
       kind:
         type: string
       low:
+        type: integer
+      low_sec_per_100m:
         type: integer
       low_sec_per_km:
         type: integer
